test/lit/pto/tquant_verify_invalid_int8_asym_no_offset.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a3 %s 2>&1 | FileCheck %s

// Negative test for pto.tquant verifier.
// CHECK: error: 'pto.tquant' op INT8_ASYM quantization requires an offset operand

func.func @tquant_asym_no_offset() attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
  %src = memref.alloc() : memref<16x16xf32, #pto.address_space<vec>>
  %fp = memref.alloc() : memref<16x16xf32, #pto.address_space<vec>>
  %dst = memref.alloc() : memref<16x16xui8, #pto.address_space<vec>>

  pto.tquant ins(%src, %fp : memref<16x16xf32, #pto.address_space<vec>>,
                             memref<16x16xf32, #pto.address_space<vec>>)
             outs(%dst : memref<16x16xui8, #pto.address_space<vec>>)
             {quant_type = #pto<quant_type INT8_ASYM>}

  return
}